# thai-pm25-data-pipeline

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  extract_openaq_s3_to_data_lake.py  init_master_locations.py  pyproject.toml
dags/: thai_pm25_daily_pipeline.py
data/: thai_locations.csv
dbt_thai_pm25/: dbt_project.yml  profiles.yml
dbt_thai_pm25/models/marts/: dim_thai_locations.sql  fct_pm_daily.sql  schema.yml
dbt_thai_pm25/models/staging/: schema.yml  sources.yml  stg_pm.sql  stg_pm25.sql
dbt_thai_pm25/seeds/: thai_locations.csv
scripts/: daily_extract_s3_to_gcs.py  refresh_master_locations.py
terraform/: .gitignore  main.tf  variables.tf
